--- a/static/shop_doc/index.html
+++ b/static/shop_doc/index.html
@@ -168,7 +168,7 @@
 	                  JavaScripts
 	                  ========================== -->
 					<!-- jquery plugins here-->
-				    <script src="js/jquery-1.12.1.min.js"></script>
+				    <!-- <script src="js/jquery-1.12.1.min.js"></script> -->
 				    <script src="js/popper.min.js"></script>
 				    <script src="js/bootstrap.min.js"></script>
 				    <script src="js/jquery.magnific-popup.js"></script>
@@ -177,7 +177,7 @@
 				    <script src="js/owl.carousel.min.js"></script>
 				    <script src="js/jquery.nice-select.min.js"></script>
 				    <script src="js/slick.min.js"></script>
-				    <script src="js/jquery.counterup.min.js"></script>
+				    <!-- <script src="js/jquery.counterup.min.js"></script> -->
 				    <script src="js/waypoints.min.js"></script>
 				    <script src="js/contact.js"></script>
 				    <script src="js/jquery.ajaxchimp.min.js"></script>
